--- a/public/playground/package.json
+++ b/public/playground/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
     "vue": "^2.5.17"
   },
   "devDependencies": {
